task1/test_results_no_defects/infer_test/buffer_overrun_dynamic/report.txt
#0
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/02.wo_Defects/buffer_overrun_dynamic.c:331: error: Buffer Overrun L2
  Offset: [3, 6] Size: 5.
  329. 	if(buf!=NULL)
  330. 	{
  331. 	    *(buf+indexes[index]) = 1;/*Tool should Not detect this line as error*/ /*No ERROR:Buffer overrun*/
            ^
  332. 	    free(buf);
  333. 	}

#1
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/02.wo_Defects/buffer_overrun_dynamic.c:512: error: Buffer Overrun L2
  Offset: [0, 4] Size: 3.
  510. 	    	*(buf1+i)=i;
  511. 		}
  512.     	*(buf2+*(buf1+2))=1;/*Tool should Not detect this line as error*/ /*No ERROR:Buffer overrun*/
            ^
  513. 	    free(buf1);
  514. 	    free(buf2);

Found 2 issues
            Issue Type(ISSUED_TYPE_ID): #
  Buffer Overrun L2(BUFFER_OVERRUN_L2): 2
